// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<tbody
  className="cf-table__body"
>
  TableBody
</tbody>
`;

exports[`should render extra class names 1`] = `
<tbody
  className="cf-table__body extra"
>
  TableBody
</tbody>
`;
